fix:  remove the scrollbar

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -118,6 +118,13 @@ nz-content {
   overflow-y: scroll;
   overflow-x: auto;
   -webkit-overflow-scrolling: touch;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  &::-webkit-scrollbar {
+    display: none;
+    width: 0;
+    height: 0;
+  }
 }
 
 .header1 {
